<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mapx.kosten.infocomarca.fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:layout_marginTop="7sp"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity= "center"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:layout_gravity= "center"
            android:layout_marginTop="30sp"
            android:adjustViewBounds="true"
            android:src="@mipmap/kosten_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosten_name"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity= "center"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosten_info"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity= "center"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="Contacto:"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity= "center"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosten_mail"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="italic"
            android:layout_gravity= "center"
            android:textSize="15sp"/>

    </LinearLayout>

</FrameLayout>
