<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- Toolbar Layout -->
    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbarLayout_main"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="7sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_gravity= "center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_lema"
                android:layout_marginTop="7sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_gravity= "center"
                android:gravity= "center"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_margin="15sp"/>

            <TextView
                android:id="@+id/txtView_appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:layout_marginTop="7sp"
                android:layout_marginBottom="7sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_gravity= "center"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/colorTextPrimary"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="matrix"
                android:layout_gravity= "center"
                android:layout_marginTop="30sp"
                android:adjustViewBounds="true"
                android:src="@mipmap/kosten_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kosten_name"
                android:textColor="@color/colorTextPrimary"
                android:layout_gravity= "center"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kosten_info"
                android:textColor="@color/colorTextPrimary"
                android:layout_gravity= "center"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="Contacto:"
                android:textColor="@color/colorTextPrimary"
                android:layout_gravity= "center"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kosten_mail"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="italic"
                android:layout_gravity= "center"
                android:textSize="15sp"
                android:autoLink="email"/>

        </LinearLayout>
    </ScrollView>



 </LinearLayout>